@@ -4,4 +4,6 @@ Simple multiplayer 2D shooter by using Java &amp; JavaFX.
 Game programmed in IntellijIDEA with Java 16.
 All assets are either made by author or had been taken from https://opengameart.org.
 
+VM options: --module-path %PATH_TO_JAVAFX%\lib --add-modules=javafx.controls,javafx.fxml,javafx.web
+
 Project was made for self education.
